--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -153,7 +153,7 @@ en:
       text: Strategic advice in the development of digital solutions as well as in innovation and change processes
 
   projects_link_text: Case Studies
-  projects_title: Challenges where have supported our customers 
+  projects_title: Challenges where we have supported our customers 
   projects_goal_title: Objectives
   projects_approach_title: Procedure
   projects_result_title: Result
