text changes enabling & coaching

--- a/_data/pages/services.yml
+++ b/_data/pages/services.yml
@@ -22,7 +22,7 @@ de:
     - name: Enabling & Coaching
       img: dlabs_approach-coaching.jpg
       img-position: top
-      text: Wir entwickeln anhand der Bedürfnisse unserer Teilnehmer maßgeschneiderte Formate. In diesen nutzerzentrierten Workshops und Trainings vermitteln wir die erforderlichen Fähigkeiten, welche insbesondere im Kontext von Innovationsprozessen und agilen Arbeitsweisen benötigt werden. 
+      text: Wir befähigen unsere Kunden darin agil und nutzerzentriert zu arbeiten – nachhaltig und auf die jeweiligen individuellen Kundenbedürfnisse zugeschnitten. Dabei schöpfen unsere Coaches aus unseren jahrelangen Projekterfahrungen und den verschiedenen Expertisen eines interdisziplinären Teams.
       color: green
     - name: Business & Innovation
       img: dlabs_approach-business.jpg
@@ -61,7 +61,7 @@ en:
     - name: Enabling & Coaching
       img: dlabs_approach-coaching.jpg
       img-position: top
-      text: We develop customized formats based on the needs of our participants. In these user-centered workshops and trainings, we provide the necessary skills which are especially needed in the context of innovation processes and agile working methods.
+      text: We enable our customers to work in an agile and user-centered way - sustainable and tailored to the individual needs of each customer. Our coaches draw on our many years of project experience and the various expertise of an interdisciplinary team.
       color: green
     - name: Business & Innovation
       img: dlabs_approach-business.jpg
