--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -37,7 +37,7 @@ de:
   projects_result_title: Ergebnis
 
   user_research: User Research
-  design: Digitial Experience Design
+  design: Digital Experience Design
   engineering: Software Engineering
   consulting: Business & Innovation
   training: Enabling & Coaching
@@ -159,7 +159,7 @@ en:
   projects_result_title: Result
 
   user_research: User Research
-  design: Digitial Experience Design
+  design: Digital Experience Design
   engineering: Software Engineering
   consulting: Consulting
   training: Training
