--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -107,7 +107,7 @@ en:
   whatsapp_url: https://wa.me/+4915165218372
 
   benefits:
-    - label: Weiterbilding
+    - label: Weiterbildung
       img: job-benefits/icon-qualification.svg
     - label: Mobiles Arbeiten
       img: job-benefits/icon-homeoffice.svg
