--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -4,7 +4,7 @@ de:
   intro_text: 'Du möchtest dich in unser kreatives, interdisziplinäres Team einbringen? Dann schau dir unsere Jobangebote für dich an und sende uns deine Kontaktdaten! Der erste Schritt zum neuen Job bei D-LABS in Potsdam oder am Standort Berlin ist schnell gemacht.'
   list_title: Wir suchen
 
-  initiative_text: 'Dein Traumjob ist nicht aufgeführt? Kein Problem. Schreib uns einfach trotzdem und zeige uns, wie du unser Team verstärken könntest!'
+  initiative_text: 'Dein Traumjob ist nicht aufgeführt? Kein Problem. Schreib uns einfach trotzdem und zeige uns, wie Du unser Team verstärken könntest!'
   initiative_button_label: Jetzt initiativ bewerben
   initiative_button_target: mailto:jobs@d-labs.com
 
@@ -55,8 +55,8 @@ de:
   team_fit_url: mailto:jobs@d-labs.com
   team_fit_button_label: Jetzt Kontaktdaten schicken!
 
-  apply_now_heading: Bewirb dich jetzt!
-  apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für dich vielleicht nur noch einen Klick entfernt!
+  apply_now_heading: Bewirb Dich jetzt!
+  apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für Dich vielleicht nur noch einen Klick entfernt!
   apply_now_url: mailto:jobs@d-labs.com
   apply_now_button_label: Jetzt Kontaktdaten schicken!
 
