--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -39,7 +39,7 @@ de:
 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Kontaktdaten schicken!
+  team_fit_button_label: Jetzt Unterlagen schicken!
 
   download_button_label: Download PDF
 
@@ -108,7 +108,7 @@ en:
 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Kontaktdaten schicken!
+  team_fit_button_label: Jetzt Unterlagen schicken!
 
   download_button_label: Download PDF
 
