--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -48,12 +48,12 @@ de:
 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Kontaktdaten schicken!
+  team_fit_button_label: Jetzt Unterlagen schicken!
 
   apply_now_heading: Bewirb Dich jetzt!
   apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für Dich vielleicht nur noch einen Klick entfernt!
   apply_now_url: mailto:jobs@d-labs.com
-  apply_now_button_label: Jetzt Kontaktdaten schicken!
+  apply_now_button_label: Jetzt Unterlagen schicken!
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
@@ -117,12 +117,12 @@ en:
 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Kontaktdaten schicken!
+  team_fit_button_label: Jetzt Unterlagen schicken!
 
   apply_now_heading: Bewirb dich jetzt!
   apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für dich vielleicht nur noch einen Klick entfernt!
   apply_now_url: mailto:jobs@d-labs.com
-  apply_now_button_label: Jetzt Kontaktdaten schicken!
+  apply_now_button_label: Jetzt Unterlagen schicken!
 
   contact:
     title: If you have any questions, please do not hesitate to contact us.
