--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -57,11 +57,11 @@ de:
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
-    avatar_img: dlabs_contact-uta.jpg
-    name: Uta Kanthack
-    position: Business Administration & Controlling
+    avatar_img: dlabs_contact-julia.jpg
+    name: Julia Heyland
+    position: HR Assistentin
     tel: +49 331 97 992 334
-    mobile: +49 151 461 432 37
+    mobile: +49 151 462 53 803
     email: jobs@d-labs.com
     cta_text: Anfragen
 
@@ -126,10 +126,10 @@ en:
 
   contact:
     title: If you have any questions, please do not hesitate to contact us.
-    avatar_img: dlabs_contact-uta.jpg
-    name: Uta Kanthack
-    position: Business Administration & Controlling
+    avatar_img: dlabs_contact-julia.jpg
+    name: Julia Heyland
+    position: HR Assistant
     tel: +49 331 97 992 334
-    mobile: +49 151 461 432 37
+    mobile: +49 151 462 53 803
     email: jobs@d-labs.com
     cta_text: contact
