update jobs and job sites
also deleted unused images

--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -5,6 +5,8 @@ de:
   list_title: Wir suchen
 
   initiative_text: 'Dein Traumjob ist nicht aufgeführt? Kein Problem. Schreib uns einfach trotzdem und zeige uns, wie Du unser Team verstärken könntest!'
+  inclusivity_text: 'Ein Teil von D-LABS zu sein bedeutet so zu sein wie du bist!
+  Daher gelten unsere Personenbezeichnungen natürlich für alle Geschlechteridentitäten.'
   initiative_button_label: Jetzt initiativ bewerben
   initiative_button_target: mailto:jobs@d-labs.com
 
@@ -26,17 +28,24 @@ de:
 
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
+  
+
+  benefits_title: Unsere Benefits für Dich!
 
   benefits:
     - label: Weiterbildung
       img: job-benefits/icon-qualification.svg
-    - label: Mobiles Arbeiten
-      img: job-benefits/icon-homeoffice.svg
-    - label: Flexible Arbeitszeiten
+      text: "Sei es die klassische Fortbildung, eine neue Sprache, der Blick über den Tellerrand des eigenen Fachbereichs oder der Ausbau unserer D-LABS Bibliothek: D-LABS unterstützt Dich dabei, Dich dahin zu entwickeln, wo Du hinwillst. Interne Formate fördern den Wissenstransfer im Team, während für externe Formate alle Kosten übernommen werden."
+    - label: Flexibles Arbeiten
       img: job-benefits/icon-flexible-time.svg
-    - label: Teamevents
+      text: "New Work ist für uns Alltag. Bei D-LABS entscheidest Du, welche Arbeitsweise Dir am Besten gefällt. Ob Präsenzbüro oder Homeoffice, ob früher Vogel oder Nachteule – wir sagen: Die Mischung macht's! Auch zwischen unseren Standorten darf frei und bedarfsgerecht gewählt werden. Selbst wer gerne ein paar Monate im Jahr aus dem Ausland arbeitet, kommt auf seine Kosten. Das ist echte Flexibilität!"
+    - label: Unternehmenskulur
       img: job-benefits/icon-teamevent.svg
-
+      text: "Agil arbeiten heißt, auf Augenhöhe miteinander umzugehen. Teamübergreifend pflegen wir daher eine lockere und kreative Arbeitsatmosphäre und legen Wert darauf, dass jede Stimme Gewicht hat und gehört wird. So spannend unsere Projekte auch sind: Bei D-LABS arbeiten heißt, Mensch zu sein. Neben unseren Teammeetings organisieren wir daher regelmäßig Events, bei denen alle vorbeikommen und gemeinsam entspannen können."
+    - label: Familienfreundlichkeit
+      img: job-benefits/icon-family-friendliness.svg
+      text: "Für manche sind es die Kids, für andere der beste Freund des Menschen – zum Menschsein gehört die Familie und so ist es bei D-LABS selbstverständlich, Arbeitszeiten an den Zeitplan der Kinder anzupassen, für private Termine Platz im Kalender freizumachen oder den Familienhund mit in's Büro nehmen zu können."
+      
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
   team_fit_button_label: Jetzt Unterlagen schicken!
@@ -50,6 +59,8 @@ de:
   team_fit_url: mailto:jobs@d-labs.com
   team_fit_button_label: Jetzt Unterlagen schicken!
 
+  apply_now_button: jetzt-bewerben.svg
+  apply_now_button_hover: jetzt-bewerben-hover.svg
   apply_now_heading: Bewirb Dich jetzt!
   apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für Dich vielleicht nur noch einen Klick entfernt!
   apply_now_url: mailto:jobs@d-labs.com
@@ -73,7 +84,9 @@ en:
   intro_text: 'Would you like to join our creative, interdisciplinary team? Then take a look at our job offers for you and send us your contact details! The first step to a new job at D-LABS in Potsdam or at our Berlin location is quickly taken.'
   list_title: We are looking for
 
-  initiative_text: 'Your dream job isn’t listed? No problem. Just write us anyway and show us how you could strengthen our team!'
+  initiative_text: 'Your dream job isn’t listed? No problem. Just write us anyway and show us how you could strengthen our team!
+  We are always looking for new talents.'
+  # inclusivity_text: 'To be a part of D-LABS means to be who you are! Therefore, our personal pronouns naturally apply to all gender identities.'
   initiative_button_label: apply now
   initiative_button_target: mailto:jobs@d-labs.com
 
@@ -96,15 +109,20 @@ en:
   back_button_label: Alle Jobangebote
   learn_more: Mehr Erfahren
 
+  benefits_title: Our benefits for You!
   benefits:
-    - label: Weiterbildung
+    - label: Advanced Training
       img: job-benefits/icon-qualification.svg
-    - label: Mobiles Arbeiten
-      img: job-benefits/icon-homeoffice.svg
-    - label: Flexible Arbeitszeiten
+      text: "Whether it's professional coaching, learning a new language, expanding your expertise beyond the boundaries of your discipline or adding books to our D-LABS library: D-LABS supports you in getting where you want to go. Team sessions promote the transfer of knowledge between team members, while costs are covered for external coaching."
+    - label: Flexibility
       img: job-benefits/icon-flexible-time.svg
-    - label: Teamevents
+      text: "We live and love New Work. At D-LABS, you decide when and where you want to work. In-person or at home, early bird or night owl – mix and match as you see fit! You may choose freely between our offices… or is your preferred environment abroad? No problem: For a few months, you can work from a country of your choice as well. That's true flexibility!"
+    - label: Company Culture
       img: job-benefits/icon-teamevent.svg
+      text: "An agile mindset requires being on equal footing with everyone you work with. That's why we cultivate an easygoing and creative atmosphere across our teams and ensure every voice carries weight and is heard. As exciting as our projects can be: We're all human at D-LABS. Aside from our team meetings, we regularly organize events to come together and relax after a job well done."
+    - label: Family Friendliness
+      img: job-benefits/icon-family-friendliness.svg
+      text: "For some it's the kids, for others man's best friend – family is a crucial part of human experience. For us at D-LABS, it's only natural to adjust working hours to your child's schedule, to make room in your calendar for private appointments or take your family dog to the office."
 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
@@ -119,6 +137,8 @@ en:
   team_fit_url: mailto:jobs@d-labs.com
   team_fit_button_label: Jetzt Unterlagen schicken!
 
+  apply_now_button: apply-now.svg
+  apply_now_button_hover: apply-now-hover.svg
   apply_now_heading: Bewirb dich jetzt!
   apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für dich vielleicht nur noch einen Klick entfernt!
   apply_now_url: mailto:jobs@d-labs.com
