--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -1,17 +1,16 @@
 de:
-  title_text: '**Dein Profil!**<br/>Unser Angebot!'
+  title_text: 'Wer uns fehlt,<br/>**bist du!**'
 
   intro_text: 'Du möchtest dich in unser kreatives, interdisziplinäres Team einbringen? Dann schau dir unsere Jobangebote für dich an und sende uns deine Kontaktdaten! Der erste Schritt zum neuen Job bei D-LABS in Potsdam oder am Standort Berlin ist schnell gemacht.'
-  list_title: Wir suchen
+  list_title: Wir suchen Dich*
 
   initiative_text: 'Dein Traumjob ist nicht aufgeführt? Kein Problem. Schreib uns einfach trotzdem und zeige uns, wie Du unser Team verstärken könntest!'
   inclusivity_text: 'Ein Teil von D-LABS zu sein bedeutet so zu sein wie du bist!
   Daher gelten unsere Personenbezeichnungen natürlich für alle Geschlechteridentitäten.'
-  initiative_button_label: Jetzt initiativ bewerben
+  initiative_button_label: Jetzt initiativ bewerben!
   initiative_button_target: mailto:jobs@d-labs.com
 
   slider_title: Warum D-LABS?
-
   slides:
     - name: Peter 
       position: Senior User Researcher
@@ -26,12 +25,7 @@ de:
       quote: Bei D-LABS kann ich so arbeiten, dass ich noch Zeit für meine Familie habe. Gleichzeitig habe ich die Möglichkeit auf anspruchsvollen Projekten zu arbeiten. Diese Vereinbarkeit ist mir sehr wichtig, weil Familie zu haben hier nicht bedeutet Abstriche in der beruflichen Entwicklung machen zu müssen.
       img: profil_doreen.jpg
 
-  back_button_label: Alle Jobangebote
-  learn_more: Mehr Erfahren
-  
-
   benefits_title: Unsere Benefits für Dich!
-
   benefits:
     - label: Weiterbildung
       img: job-benefits/icon-qualification.svg
@@ -45,7 +39,10 @@ de:
     - label: Familienfreundlichkeit
       img: job-benefits/icon-family-friendliness.svg
       text: "Für manche sind es die Kids, für andere der beste Freund des Menschen – zum Menschsein gehört die Familie und so ist es bei D-LABS selbstverständlich, Arbeitszeiten an den Zeitplan der Kinder anzupassen, für private Termine Platz im Kalender freizumachen oder den Familienhund mit in's Büro nehmen zu können."
-      
+  
+  back_button_label: Alle Jobangebote
+  learn_more: Klingt spannend!
+ 
   team_fit_heading: Du passt perfekt in unser Team?
   team_fit_url: mailto:jobs@d-labs.com
   team_fit_button_label: Jetzt Unterlagen schicken!
@@ -55,16 +52,11 @@ de:
   profile_heading: Dein Profil
   tasks_heading: Deine Aufgaben
 
-  team_fit_heading: Du passt perfekt in unser Team?
-  team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Unterlagen schicken!
-
-  apply_now_button: jetzt-bewerben.svg
-  apply_now_button_hover: jetzt-bewerben-hover.svg
-  apply_now_heading: Bewirb Dich jetzt!
-  apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für Dich vielleicht nur noch einen Klick entfernt!
+  circle_apply_now_button_label: Jetzt bewerben
+  apply_now_heading: Bist du bereit?
+  apply_now_description: "Sende uns deine Bewerbungsunterlagen oder erzähl uns in einem kurzen Video wer du bist!"
   apply_now_url: mailto:jobs@d-labs.com
-  apply_now_button_label: Jetzt Unterlagen schicken!
+  apply_now_button_label: Jetzt bewerben!
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
@@ -76,17 +68,17 @@ de:
     email: jobs@d-labs.com
     cta_text: Anfragen
 
-
+  you_are_missing: Wer uns fehlt, bist Du!
 
 en:
-  title_text: '**Your profile!**<br/>Our offer!'
+  title_text: 'Who we are missing,<br/>**is you!**'
 
-  intro_text: 'Would you like to join our creative, interdisciplinary team? Then take a look at our job offers for you and send us your contact details! The first step to a new job at D-LABS in Potsdam or at our Berlin location is quickly taken.'
-  list_title: We are looking for
+  intro_text: 'Would you like to join our creative, interdisciplinary team? Then take a look at our job offers for you and send us your contact details! The first step to a new job at D-LABS is taken quickly.'
+  list_title: We are looking for you*
 
   initiative_text: 'Your dream job isn’t listed? No problem. Just write us anyway and show us how you could strengthen our team!
   We are always looking for new talents.'
-  # inclusivity_text: 'To be a part of D-LABS means to be who you are! Therefore, our personal pronouns naturally apply to all gender identities.'
+  inclusivity_text: 'To be a part of D-LABS means to be who you are! Therefore, our personal pronouns naturally apply to all gender identities.'
   initiative_button_label: apply now
   initiative_button_target: mailto:jobs@d-labs.com
 
@@ -106,8 +98,8 @@ en:
       quote: At D-LABS, I can work in such a way that I still have time for my family. At the same time, I have the opportunity to work on demanding projects. This compatibility is very important to me because here having a family does not mean having to give up anything in my professional development.
       img: profil_doreen.jpg
 
-  back_button_label: Alle Jobangebote
-  learn_more: Mehr Erfahren
+  back_button_label: All job offers
+  learn_more: Sounds exciting!
 
   benefits_title: Our benefits for You!
   benefits:
@@ -124,25 +116,16 @@ en:
       img: job-benefits/icon-family-friendliness.svg
       text: "For some it's the kids, for others man's best friend – family is a crucial part of human experience. For us at D-LABS, it's only natural to adjust working hours to your child's schedule, to make room in your calendar for private appointments or take your family dog to the office."
 
-  team_fit_heading: Du passt perfekt in unser Team?
-  team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Unterlagen schicken!
-
   download_button_label: Download PDF
 
-  profile_heading: Dein Profil
-  tasks_heading: Deine Aufgaben
+  profile_heading: Your profile
+  tasks_heading: Your tasks
 
-  team_fit_heading: Du passt perfekt in unser Team?
-  team_fit_url: mailto:jobs@d-labs.com
-  team_fit_button_label: Jetzt Unterlagen schicken!
-
-  apply_now_button: apply-now.svg
-  apply_now_button_hover: apply-now-hover.svg
-  apply_now_heading: Bewirb dich jetzt!
-  apply_now_description: Gutes Arbeitsklima, Betreuung von regionalen und überregionalen Kunden sowie viel Gestaltungsspielraum und Freiraum sind für dich vielleicht nur noch einen Klick entfernt!
+  circle_apply_now_button_label: Apply<br/>now
+  apply_now_heading: Are you ready?
+  apply_now_description: Send us your application documents or tell us in a short video who you are!
   apply_now_url: mailto:jobs@d-labs.com
-  apply_now_button_label: Jetzt Unterlagen schicken!
+  apply_now_button_label: Apply now!
 
   contact:
     title: If you have any questions, please do not hesitate to contact us.
@@ -153,3 +136,4 @@ en:
     mobile: +49 151 462 53 803
     email: jobs@d-labs.com
     cta_text: contact
+  you_are_missing: Who we are missing, is you!
