--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -7,9 +7,9 @@ de:
 
   Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
   "
-  intro_image: dlabs_about-us-01.jpg
+  intro_image: about-us/dlabs_about-us-01.jpg
 
-  about_image: dlabs_about-us-02.jpg
+  about_image: about-us/dlabs_about-us-02.jpg
   about_text: "
   Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten in allen Kompetenzfeldern angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
@@ -33,9 +33,9 @@ en:
 
   We design, optimize and implement digital products and services with a clear focus on the essentials: the needs of the users.
   "
-  intro_image: dlabs_about-us-01.jpg
+  intro_image: about-us/dlabs_about-us-01.jpg
 
-  about_image: dlabs_about-us-02.jpg
+  about_image: about-us/dlabs_about-us-02.jpg
   about_text: "
   For us, user-centered work and agility are not just buzzwords, but concrete approaches that are applied by our experts in all areas of competence.  This interdisciplinary approach enables us to flexibly change perspectives, to develop innovative solutions and to make sustainable use of the potential of digitalization.
 
