--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -68,7 +68,7 @@ de:
 
   contact:
     title: Für Fragen stehen wir dir gern zur Verfügung.
-    avatar_img: dlabs_contact-julia.jpg
+    avatar_img: dlabs_contact-julia.png
     name: Julia Heyland
     position: Human Resources Manager
     tel: +49 331 97 992 334
@@ -147,7 +147,7 @@ en:
 
   contact:
     title: If you have any questions, please do not hesitate to contact us.
-    avatar_img: dlabs_contact-julia.jpg
+    avatar_img: dlabs_contact-julia.png
     name: Julia Heyland
     position: Human Resources Manager
     tel: +49 331 97 992 334
