--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -68,11 +68,11 @@ de:
 
   contact:
     title: Für Fragen stehen wir dir gern zur Verfügung.
-    avatar_img: dlabs_contact-julia.png
-    name: Julia Heyland
-    position: Human Resources Manager
+    avatar_img: dlabs_contact-elina.jpeg
+    name: Elina Bass-Mazana
+    position: Office Manager
     tel: +49 331 97 992 334
-    mobile: +49 151 462 53 803
+    mobile: +49 170 248 62 44
     email: jobs@d-labs.com
     our_locations: Zu unseren Standorten
     cta_text: Anfragen
@@ -147,11 +147,11 @@ en:
 
   contact:
     title: If you have any questions, please do not hesitate to contact us.
-    avatar_img: dlabs_contact-julia.png
-    name: Julia Heyland
-    position: Human Resources Manager
+    avatar_img: dlabs_contact-elina.jpeg
+    name: Elina Bass-Mazana
+    position: Office Manager
     tel: +49 331 97 992 334
-    mobile: +49 151 462 53 803
+    mobile: +49 170 248 62 44
     email: jobs@d-labs.com
     our_locations: View our locations
     cta_text: contact
