feat: update quote picture of Peter

--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -15,7 +15,7 @@ de:
     - name: Peter 
       position: Senior User Researcher
       quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
-      img: quotes/quote-peter.png
+      img: quotes/quote-peter.jpeg
     - name: Claudia 
       position: Director Digital Experience Design
       quote: Die enge Zusammenarbeit mit Experten aus verschiedenen Bereichen und mit unterschiedlichen Schwerpunkten ist immer wieder spannend. Auch die Bandbreite der Projekte für namhafte Kunden aus den unterschiedlichsten Branchen sorgt dafür, dass ich immer noch etwas dazu lernen kann. Nicht zuletzt schlägt mein Herz für Potsdam.
@@ -97,7 +97,7 @@ en:
     - name: Peter 
       position: Senior User Researcher
       quote: Because we make the world a little more accessible every day. With our focus on end-user needs, we create solutions that inspire our customers. This is where user experience is lived.
-      img: quotes/quote-peter.png
+      img: quotes/quote-peter.jpeg
     - name: Claudia 
       position: Director Digital Experience Design
       quote: The close cooperation with experts from different fields and with different focal points is always exciting. The range of projects for well-known customers from a wide range of industries also ensures that I can still learn something about them. Last but not least, my heart beats for Potsdam.
